[tool.poetry]
name = "multiverse-task"
version = "0.1.0"
description = ""
authors = ["Tomos Williams"]
readme = "README.md"
packages = [{include = "multiverse_task"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
